# llm_playground

./: .gitignore  README.md  pyproject.toml  tasks.py
notebooks/: guidance.ipynb  llama_cpp.ipynb  lmql.ipynb  outlines.ipynb
