[tool.poetry]
name = "llm_playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "^0.2.36"
outlines = "^0.0.32"
guidance = "^0.1.10"
lmql = "^0.7.3"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.2"
invoke = "^2.2.0"
requests = "^2.31.0"
pyright = "^1.1.350"
jupyterlab = "^4.0.11"
ipython = "^8.20.0"
ruff = "^0.2.2"

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
